namespace adapter
{
    public interface IBankAccount
    {
        string GetAccountNumber();
        decimal GetBalance();
    }
}
