namespace adapter
{
    public class ThirdPartyBankAccount
    {
        public string AccountNumber { get; set; }
        public double Balance { get; set; }
    }
}
